kube/coordinator-deployment-standby.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coordinator-service-standby
  namespace: id-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coordinator-service
      role: standby
  template:
    metadata:
      labels:
        app: coordinator-service
        role: standby
    spec:
      priorityClassName: low-priority
      containers:
        - name: coordinator-service
          image: localhost:5001/coordinator-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /standby-check
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
