kube/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: id-generator
  namespace: id-system
spec:
  replicas: 8  # Number of pods
  serviceName: "id-generator"   # Must match the Headless Service above
  selector:
    matchLabels:
      app: id-generator
  template:
    metadata:
      labels:
        app: id-generator
    spec:
      containers:
      - name: id-generator-container
        image: localhost:5001/id-generator:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8000
