kube/id-generation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: id-service
  namespace: id-system
spec:
  replicas: 2  # 4 replicas for load balancing
  selector:
    matchLabels:
      app: id-service
  template:
    metadata:
      labels:
        app: id-service
    spec:
      containers:
        - name: id-service
          image: localhost:5001/id-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: id-service
  namespace: id-system
spec:
  selector:
    app: id-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
