kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: id-generator-access
spec:
  selector:
    app: id-generator
  ports:
    - name: http
      protocol: TCP
      port: 80          # User-facing port
      targetPort: 8000  # Container port
